--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,12 @@
   </header>
   <main class="content">
     <section class="profile page__section">
-      <img class="profile__image" src="<%=require('./images/avatar.jpg')%>"></img>
+      <div class="avatar_container">
+        <img class="profile__image" src="<%=require('./images/avatar.jpg')%>"></img> 
+        <svg class="change-avatar_icon" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M26 3.45351L6.76981 22.7932L3.33585 19.2903L22.517 0L26 3.45351ZM0 26L5.10189 24.4706L1.52075 21.0171L0 26Z" fill="white"/>
+        </svg>  
+      </div>     
       <div class="profile__info">
         <h1 class="profile__title">Жак-Ив Кусто</h1>
         <button class="profile__edit-button" type="button"></button>
@@ -43,6 +48,17 @@
         <input type="text" id="description_input" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" minlength="2" maxlength="200" required
         pattern="[a-zA-Zа-яёА-ЯЁ\-\s]*" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы">
         <span class="description_input-error popup__input-error"></span>
+        <button type="submit" class="button popup__button">Сохранить</button>
+      </form>
+    </div>
+  </div>
+  <div class="popup popup_type_change-avatar">
+    <div class="popup__content">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Обновить аватар</h3>
+      <form class="popup__form" name="change-avatar" novalidate>
+        <input type="url" id="url_input" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на фото" required>
+        <span class="url_input-error popup__input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -77,7 +93,10 @@
     <div class="card__description">
       <h2 class="card__title">
       </h2>
-      <button type="button" class="card__like-button"></button>
+      <div class="like-button__container">
+        <button type="button" class="card__like-button"></button>
+        <span class="quantity_likes"></span>
+      </div>
     </div>
   </li>
 </template>
