--- a/src/index.html
+++ b/src/index.html
@@ -43,10 +43,14 @@
       <h3 class="popup__title">Редактировать профиль</h3>
       <form class="popup__form" name="edit-profile" novalidate>
         <input type="text" id="name_input" name="name" class="popup__input popup__input_type_name" placeholder="Имя" minlength="2" maxlength="40" required
-        pattern="[a-zA-Zа-яёА-ЯЁ\-\s]*" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы">
+        pattern="[a-zA-Zа-яёА-ЯЁ\-\s]*" 
+        data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+        data-skip-message="Вы пропустили это поле.">
         <span class="name_input-error popup__input-error"></span>
         <input type="text" id="description_input" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" minlength="2" maxlength="200" required
-        pattern="[a-zA-Zа-яёА-ЯЁ\-\s]*" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы">
+        pattern="[a-zA-Zа-яёА-ЯЁ\-\s]*" 
+        data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+        data-skip-message="Вы пропустили это поле.">
         <span class="description_input-error popup__input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
@@ -57,7 +61,9 @@
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Обновить аватар</h3>
       <form class="popup__form" name="change-avatar" novalidate>
-        <input type="url" id="url_input" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на фото" required>
+        <input type="url" id="url_input" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на фото" required
+        data-error-message="Введите адрес сайта."
+        data-skip-message="Вы пропустили это поле.">
         <span class="url_input-error popup__input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
@@ -69,9 +75,13 @@
       <h3 class="popup__title">Новое место</h3>
       <form class="popup__form" name="new-place" novalidate>
         <input type="text" id="place-name_input" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" minlength="2" maxlength="30" required
-        pattern="[a-zA-Zа-яёА-ЯЁ\-\s]*" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы">
+        pattern="[a-zA-Zа-яёА-ЯЁ\-\s]*" 
+        data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+        data-skip-message="Вы пропустили это поле.">
         <span class="place-name_input-error popup__input-error"></span>
-        <input type="url" id="url_input" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+        <input type="url" id="url_input" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required
+        data-error-message="Введите адрес сайта."
+        data-skip-message="Вы пропустили это поле.">
         <span class="url_input-error popup__input-error"></span>
         <button type="submit" class="button popup__button">Создать</button>
       </form>
